# ttchat

server/auto_setup/im_server/: setup.sh
server/auto_setup/im_server/company/: dbproxyserver.conf  fileserver.conf  httpmsgserver.conf  loginserver.conf  msfs.conf  msgserver.conf  pushserver.conf  routeserver.conf
server/auto_setup/im_server/internet/: crll-private-key.pem  dbproxyserver.conf  fileserver.conf  httpmsgserver.conf  loginserver.conf  msfs.conf  msgserver.conf  pushserver.conf
server/auto_setup/im_server/personal/: crll-public-cert.pem  dbproxyserver.conf  httpmsgserver.conf  loginserver.conf  msfs.conf  msgserver.conf  pushserver.conf
server/auto_setup/mariadb/conf/: teamtalk.sql
server/pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.Group.proto  IM.Login.proto  IM.Proxy.proto  IM.Server.proto  create_ios.sh  sync.sh
server/server/run/: restart.sh
server/server/src/: README.md  build.sh  make_hiredis.sh  make_log4cxx.sh  make_protobuf.sh  sync_lib.sh
server/server/src/base/: BaseSocket.cpp  CMakeLists.txt  HttpClient.cpp  ServInfo.h  imconn.cpp  netlib.cpp  public_define.h  version.h
server/server/src/base/include/uchat/: errno.hpp  file.hpp  flags.hpp  logger.hpp  loghelper.cpp.hpp  loglevel.hpp  numericstringview.hpp  rwlock.hpp  scopedrwlock.hpp  simplevariantview.hpp  stringview.hpp  time.hpp
server/server/src/base/uchat/: errno.cpp  file.cpp  logger.cpp  rwlock.cpp  time.cpp
server/server/src/im/msfs/: HttpConn.cpp  (+2 more)
server/server/src/test/: Client.cpp  Client.h  ClientConn.cpp  ClientConn.h  IPacketCallback.h  Makefile  test_client.cpp
(+91 files in other folders)
